tests/exec/assert-eq-cmp-error.stderr
At line 1.1 Assertion failed left == right:
left:  1.0
right: "1"

Error occurred.
