tests/exec/assert-eq-cmp-error.exec
cmd: load assert-eq-cmp-error.ecl
status: 1
